--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -72,6 +72,11 @@
               </a>
             </li>
             <li>
+              <a href="{% url 'tickets:mytickets' %}">
+                <i class="fa fa-ticket nav-icon"></i> My tickets
+              </a>
+            </li>
+            <li>
               <a href="{% url 'portal_accounts:logout' %}">
                 <i class="fa fa-sign-out nav-icon"></i> Log out
               </a>
