Search filters now work if clicked manually when no results exist.

--- a/client/src/angular/workbench/templates/search.html
+++ b/client/src/angular/workbench/templates/search.html
@@ -3,11 +3,11 @@
       <div class="row justify-content-center" >
         <div class="col-md-3"></div>
         <div class="col-md-6">
-          <form ng-submit="search_browse()">
+          <form ng-submit="search_browse(true)">
           <div class="input-group">
             <input type="text" class="form-control input-lg" ng-model="data.text" placeholder="Search for...">
             <span class="input-group-btn">
-              <button class="btn btn-default btn-lg" type="button" ng-click="search_browse()">
+              <button class="btn btn-default btn-lg" type="button" ng-click="search_browse(true)">
                 <i class="fa fa-search"></i>
               </button>
             </span>
