--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -52,7 +52,7 @@
     </thead>
     <tbody>
       <tr data-ng-if="!browser.busyListing"
-          data-ng-repeat="file in browser.listing.children"
+          data-ng-repeat="file in listingToShow()"
           data-ng-click="onSelect($event, file)"
           data-ng-class="{'dd-file-selected':  file._ui.selected}">
           <td>
@@ -74,4 +74,25 @@
       </caption>
     </tbody>
   </table> <!-- ENDS FILE LISTING TABLE -->
+  <div class="row" ng-if="!browser.busyListing && browser.listing.children.length > state.limit">
+    <div class="col-md-3">
+        <button class="btn btn-default pull-left"
+          ng-click="prevPage()"
+          ng-disabled="state.page_num === 0">
+          <i class="fa fa-chevron-left"></i> Prev
+        </button>
+      </div>
+      <div class="col-md-6">
+        <div class="text-center">
+          <span class="badge"> {{state.page_num + 1}} / {{ state.max_pages }} </span>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-default pull-right"
+          ng-click="nextPage()"
+          ng-disabled="state.page_num + 1 === state.max_pages">
+          <i class="fa fa-chevron-right"></i> More
+        </button>
+      </div>
+</div>
 </div> <!-- END FILE LISTING TABLE WRAPPER -->
