--- a/client/src/angular/notifications/template/notifications-list.html
+++ b/client/src/angular/notifications/template/notifications-list.html
@@ -1,9 +1,9 @@
 <div class="">
-  <div class="jumbotron" ng-show="vm.total===0">
+  <div class="jumbotron" ng-show="vm.service.notes.total===0">
     <h2> Whew, no notifications! </h2>
   </div>
   <notification-detail
-    ng-repeat="note in vm.notes"
+    ng-repeat="note in vm.service.notes.notifs"
     note="note"
     delete="vm.delete(note)">
   </notification-detail>
