--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -23,7 +23,7 @@
     </div>
     -->
     <div class="side-nav-button" ui-sref="wb.notifications" ui-sref-active="active">
-      <i class="fa fa-envelope-o" title="Notifications"></i>
+      <i class="fa fa-envelope-o" title="Notifications"><notifications-bell></notifications-bell></i>
       <div class="side-nav-text"> Notifications </div>
     </div>
     <div class="side-nav-button" ui-sref="wb.search" ui-sref-active="active">
