--- a/client/css/portal.css
+++ b/client/css/portal.css
@@ -39,9 +39,13 @@ footer {
   font-weight: 700;
 }
 
-.navbar-portal {
-  background-image: url('/static/img/network-Header.jpg');
-  /* background-image: url('/static/img/cep-bg.jpg'); */
+.navbar-logo-text {
+  font-size: 2.5rem;
+  font-weight: 900;
+  margin: 0.5rem;
+}
+.navbar-logo-text:hover {
+  text-decoration: none !important;
 }
 
 .navbar.navbar-default {
