--- a/client/css/workbench.css
+++ b/client/css/workbench.css
@@ -67,7 +67,7 @@
   color: #FFFFFF;
 }
 
-.workbench-nav .side-nav-button i .notify-badge {
+.workbench-nav .side-nav-button .notify-badge {
   position: absolute;
   top: -5px;
   right: -10px;
