--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -4,9 +4,7 @@
             <div class="clearfix btn-toolbar-ds dd-toolbar" ds-fix-top="dd-toolbar-fixed-top">
                 <div class="btn-toolbar pull-right" role="toolbar" aria-label="Data Browser Toolbar">
                     <form class="navbar-form navbar-left" ng-submit="ops.search()" style="display:flex"
-                            ng-hide="['Dropbox', 'Box', 'Google Drive', 'Project View', 'Project Data View'].includes(placeholder()) ||
-                            browser.busy ||
-                            browser.busyListing">
+                            ng-hide="['Dropbox', 'Box', 'Google Drive', 'Project View', 'Project Data View'].includes(placeholder())">
                         <input class="form-control" style="width:240px;" placeholder="Search" ng-model="search.queryString">
                         <button class="btn btn-default" style="clear: right;">
                             <i class="fa fa-search"></i>
