--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -40,6 +40,12 @@
     of it as soon as possible.
   </p>
 </div>
+<div class="push-keys-message" data-ng-if="browser.error.status == 404">
+  <p>
+    There seems to be a problem loading your storage system. <br />
+    You may be able to fix this problem by <a href="https://cep.dev/accounts/logout">logging out</a> and logging in again.
+  </p>
+</div>
 <div class="table-responsive dd-listing-wrapper"> <!-- START FILE LISTING TABLE WRAPPER -->
   <table class="table table-bordered table-striped"><!-- START FILE LISTING TABLE -->
     <thead>
