logout url is relative

--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -43,7 +43,7 @@
 <div class="push-keys-message" data-ng-if="browser.error.status == 404">
   <p>
     There seems to be a problem loading your storage system. <br />
-    You may be able to fix this problem by <a href="https://cep.dev/accounts/logout">logging out</a> and logging in again.
+    You may be able to fix this problem by <a href="/accounts/logout">logging out</a> and logging in again.
   </p>
 </div>
 <div class="table-responsive dd-listing-wrapper"> <!-- START FILE LISTING TABLE WRAPPER -->
