--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -162,6 +162,7 @@
                         <a class="list-group-item" ui-sref="wb.data_depot.db({
                                 systemId: sysCommunityData.systemId,
                                 filePath:'',
+                                query_string: null,
                                 name: sysCommunityData.name,
                                 directory: 'public'})"
                                 ui-sref-active="active">
