Updated navigation names as per CMD requests.

--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -1,18 +1,18 @@
 <div class="workbench">
   <div class="workbench-nav">
     <div class="side-nav-button" ui-sref="wb.dashboard"  ui-sref-active="active">
-      <i class="fa fa-dashboard" title="Workbench"></i>
-      <div class="side-nav-text"> Workbench </div>
+      <i class="fa fa-dashboard" title="Dashboard"></i>
+      <div class="side-nav-text"> Dashboard </div>
     </div>
     <div  class="side-nav-button"
           ui-sref="wb.data_depot.db({'systemId': vm.mydata_system.systemId, 'path': '', 'name': vm.mydata_system.name, 'directory': 'agave'})"
           ui-sref-active="{'active': 'wb.data_depot.**'}">
-      <i class="fa fa-folder-open" title="Data Depot"></i>
-      <div class="side-nav-text"> Data Depot </div>
+      <i class="fa fa-folder-open" title="Data Files"></i>
+      <div class="side-nav-text"> Data Files </div>
     </div>
     <div class="side-nav-button" ui-sref="wb.workspace" ui-sref-active="active">
-      <i class="fa fa-cubes" title="Workspace"></i>
-      <div class="side-nav-text"> Workspace </div>
+      <i class="fa fa-cubes" title="Applications"></i>
+      <div class="side-nav-text"> Applications </div>
 
     </div>
     <!-- General Help will live under CMS control. -->
