Notification toasts must be explicitly started in service

--- a/client/src/angular/notifications/template/notifications-bell.html
+++ b/client/src/angular/notifications/template/notifications-bell.html
@@ -7,7 +7,7 @@
     </a>
     <ul uib-dropdown-menu class="dropdown-menu notifications" aria-labelledby="dLabel"> 
         <li>
-            <a>
+            <a href="/workbench/notifications">
                 Notifications
                 <span class="pull-right">
                     View all
