--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,4 +1,5 @@
 {% load sd2e_nav_tags menu_tags cms_tags staticfiles %}
+{% load sekizai_tags %}
 {% if settings.PORTAL_NAVBAR_BACKGROUND_FILENAME %}
 <nav class="navbar navbar-default" style="background-image: url('{{ settings.PORTAL_NAVBAR_BACKGROUND_FILENAME }}');">
 {% else %}
@@ -47,7 +48,18 @@
       {% endif %}
       <ul class="nav navbar-nav navbar-right">
       {% if user.is_authenticated %}
-      <div class="nav navbar-nav navbar-right"  ng-controller="NavSearchCtrl as vm">
+        {% addtoblock "js" %}
+          <script type="text/javascript">
+            document.addEventListener("DOMContentLoaded", function(event) {
+              angular.bootstrap(document.getElementById("notifications-bell-container"), ['portal.notifications']);
+            });
+          </script>
+        {% endaddtoblock %}
+        <div id="notifications-bell-container">
+          <notifications-bell></notifications-bell>
+        </div>
+
+     <div class="nav navbar-nav navbar-right"  ng-controller="NavSearchCtrl as vm">
         <!-- Unused Serach Bar -->
         <!--
         <form class="navbar-form navbar-left navbar-input-group">
