Individual deletion works

--- a/client/src/angular/notifications/template/notification-detail.html
+++ b/client/src/angular/notifications/template/notification-detail.html
@@ -15,4 +15,7 @@
   <div class="notification-time">
     <span class="badge"> {{vm.note.datetime | date:'medium'}} </span>
   </div>
+  <div class="notification-delete">
+    <i class="fa fa-remove" ng-click="vm.delete(note)"></i>
+  </div>
 </div>
