--- a/client/src/angular/workspace/templates/application-form.html
+++ b/client/src/angular/workspace/templates/application-form.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <h1>Select an app</h1>
         <p>Select an application from the tray above.</p>
-        <p> The <em>Workspace</em> allows users to perform simulations and analyze 
+        <p> The <em>Applications Workspace</em> allows users to perform simulations and analyze 
             data using popular simulation codes as well as data analysis and visualization tools including Jupyter, MATLAB,
              and QGIS.
         </p>
