ng-app in body, removed window event messaging, etc.

--- a/client/src/angular/notifications/template/notifications-bell.html
+++ b/client/src/angular/notifications/template/notifications-bell.html
@@ -1,8 +1,8 @@
 <div id="notification-container" class="dropdown btn btn-link" uib-dropdown auto-close="outsideClick">
     <a id="dLabel" class="dropdown-toggle" role="button" uib-dropdown-toggle> 
         <i id="notification_bell" class="fa fa-bell fa-2x"></i>
-        <span id="notification-badge" title="Notifications" ng-if="vm.notes.total > 0">
-            {{vm.notes.total}}
+        <span id="notification-badge" title="Notifications" ng-if="vm.service.notes.total > 0">
+            {{vm.service.notes.total}}
         </span>
     </a>
     <ul uib-dropdown-menu class="dropdown-menu notifications" aria-labelledby="dLabel"> 
@@ -15,14 +15,14 @@
                 </span>
             </a>
         </li>
-        <div class="notifications-wrapper" ng-if="vm.notes.total > 0">
-            <notification-detail ng-repeat="note in vm.notes.notifs" note="note"></notification-detail>
+        <div class="notifications-wrapper" ng-if="vm.service.notes.total > 0">
+            <notification-detail ng-repeat="note in vm.service.notes.notifs" note="note"></notification-detail>
         </div>
-        <div class="notifications-none" ng-if="vm.notes.total == 0">
+        <div class="notifications-none" ng-if="vm.service.notes.total == 0">
             <div class="text-center">Whew, no notifications!</div>
         </div>
-        <li ng-if="vm.notes.total > 0">
-            <a href class="text-center" ng-click="deleteAll();">
+        <li ng-if="vm.service.notes.total > 0">
+            <a href class="text-center" ng-click="vm.deleteAll()">
                 Clear all notifications
             </a>
         </li>
