--- a/server/portal/apps/workbench/templates/portal/apps/workbench/index.html
+++ b/server/portal/apps/workbench/templates/portal/apps/workbench/index.html
@@ -5,7 +5,7 @@
   <base href="{% url 'workbench:index' %}">
 {% endblock %}
 {% block content %}
-  <div class="page-content" ng-app="portal">
+  <div class="page-content">
     <div ui-view class=""></div>
   </div>
   {% addtoblock "css" %}
