--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -27,7 +27,7 @@
     {% render_block "css" %}
     {% recaptcha_init 'en' %}
   </head>
-  <body>
+  <body ng-app="portal">
     <div class="content">
       {% cms_toolbar %}
       {# {% include 'includes/header.html' %}#}
