Removed unnecessary dependencies

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -51,7 +51,7 @@
           <notifications-bell></notifications-bell>
         </div>
 
-     <div class="nav navbar-nav navbar-right"  ng-controller="NavSearchCtrl as vm">
+     <div class="nav navbar-nav navbar-right">
         <!-- Unused Serach Bar -->
         <!--
         <form class="navbar-form navbar-left navbar-input-group">
