--- a/devops/ansible/playbooks/roles/celeryd/templates/celery_beat.service.j2
+++ b/devops/ansible/playbooks/roles/celeryd/templates/celery_beat.service.j2
@@ -3,48 +3,21 @@ Description=Celery Beat Daemon Service
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 User={{celeryd_user}}
 Group={{celeryd_group}}
 EnvironmentFile=/etc/conf.d/celery
 WorkingDirectory={{ celeryd_working_dir }}
-ExecStart={{celeryd_venv_bin}} multi start ${CELERY_NODES} \
+ExecStart={{celeryd_venv_bin}} \
     -A ${CELERY_APP} \
     --pidfile=${CELERYBEAT_PID_FILE} \
     --logfile=${CELERYBEAT_LOG_FILE} \
     --loglevel=${CELERYBEAT_LOG_LEVEL} \
-    ${CELERYBEAT_OPTS} \
-    --beat
-ExecStop={{celeryd_venv_bin}} multi stopwait ${CELERY_NODES} \
-    --pidfile=${CELERYBEAT_PID_FILE}
-ExecReload={{celeryd_venv_bin}} multi restart ${CELERY_NODES} \
-    -A ${CELERY_APP} \
-    --pidfile=${CELERYBAT_PID_FILE} \
-    --logfile=${CELERYBEAT_LOG_FILE} \
-    --loglevel=${CELERYBEAT_LOG_LEVEL} \
-    ${CELERYBEAT_OPTS} \
-    --beat
-# ExecStart=/srv/www/.envs/portal/bin/python2 -m celery worker \
-#     --hostname=localhost@cep-web-staging-01.tacc.utexas.edu \
-#     -A ${CELERY_APP} \
-#     --pidfile=${CELERYBEAT_PID_FILE} \
-#     --logfile=${CELERYBEAT_LOG_FILE} \
-#     --loglevel=${CELERYBEAT_LOG_LEVEL} \
-#     ${CELERYBEAT_OPTS} \
-#     --beat
-# ExecStop=/srv/www/.envs/portal/bin/python2 -m celery worker \
-#     --hostname=localhost@cep-web-staging-01.tacc.utexas.edu \
-#     --pidfile=${CELERYBEAT_PID_FILE}
-# ExecReload=/srv/www/.envs/portal/bin/python2 -m celery worker \
-#     --hostname=localhost@cep-web-staging-01.tacc.utexas.edu \
-#     -A ${CELERY_APP} \
-#     --pidfile=${CELERYBAT_PID_FILE} \
-#     --logfile=${CELERYBEAT_LOG_FILE} \
-#     --loglevel=${CELERYBEAT_LOG_LEVEL} \
-#     ${CELERYBEAT_OPTS} \
-#     --beat
-Restart=on-failure
-RemainAfterExit=yes
+    beat
 
 [Install]
 WantedBy=multi-user.target
+
+[Unit]
+Description=Celery Beat Daemon Service
+After=network.target
