Make notification links clickable

--- a/client/src/angular/notifications/css/notifications-bell.css
+++ b/client/src/angular/notifications/css/notifications-bell.css
@@ -3,8 +3,15 @@
     animation: 2s bounce;
 }
 
-.notification-message {
-    max-width: 70%;    
+.notification-message,
+.notification-message:hover {
+    width: 70%;
+    text-decoration: none;
+    color: inherit;
+}
+
+.notification:hover {
+    background:#dedede;
 }
 
 #notification-container .dropdown-toggle {
