--- a/client/src/angular/notifications/template/notification-detail.html
+++ b/client/src/angular/notifications/template/notification-detail.html
@@ -9,9 +9,9 @@
     <i class="fa fa-info" ng-if="vm.note.status=='info'"></i>
     <i class="fa fa-question-circle-o" ng-if="vm.note.status=='warning'"></i>
   </div>
-  <div class="notification-message">
+  <a class="notification-message" href="{{vm.note.action_link}}">
     <span> {{vm.note.message}} </span>
-  </div>
+  </a>
   <div class="notification-time">
     <span class="badge"> {{vm.note.datetime | date:'medium'}} </span>
   </div>
