--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -84,6 +84,7 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
   <button class="btn btn-default btn-block" 
+          data-ng-show="!(browser.busyListing || browser.busy)"
           ng-disabled="browser.reachedEnd || browser.busyListing || browser.busy" 
           ng-click="loadMore()">
             {{browser.reachedEnd? "No more files to show. ": "Show more files "}}
