Fix jobs archive path and show as action_link on notifs

--- a/client/src/angular/workbench/templates/workspace.html
+++ b/client/src/angular/workbench/templates/workspace.html
@@ -300,7 +300,7 @@
                  </div>
              </div>
              <div class="modal-footer">
-                 <a href="{{msg.extra.target_uri}}" target="_blank" class="btn btn-primary pull-left">Connect!</a>
+                 <a href="{{msg.action_link}}" target="_blank" class="btn btn-primary pull-left">Connect!</a>
                  <button class="btn btn-default" type="button" ng-click="dismiss()">Close</button>
              </div>
          </script>
