--- a/client/src/angular/notifications/template/notification-detail.html
+++ b/client/src/angular/notifications/template/notification-detail.html
@@ -9,10 +9,10 @@
     <i class="fa fa-info" ng-if="vm.note.status=='info'"></i>
     <i class="fa fa-question-circle-o" ng-if="vm.note.status=='warning'"></i>
   </div>
-  <a ng-if="vm.note.action_link == ''" class="notification-message">
-    <span> {{vm.note.message}} </span>
-  </a>
-  <a ng-if="vm.note.action_link" class="notification-message" href="{{vm.note.action_link}}">
+  <span ng-if="!vm.note.action_link" class="notification-message">
+    {{vm.note.message}}
+  </span>
+  <a ng-if="vm.note.action_link" class="notification-message" href="{{vm.note.action_link}}" target="_blank">
     <span> {{vm.note.message}} </span>
   </a>
   <div class="notification-time">
