--- a/client/src/angular/data_depot/templates/agave-data-listing.html
+++ b/client/src/angular/data_depot/templates/agave-data-listing.html
@@ -58,7 +58,7 @@
     </thead>
     <tbody>
       <tr data-ng-if="!browser.busyListing"
-          data-ng-repeat="file in listingToShow()"
+          data-ng-repeat="file in browser.listing.children"
           data-ng-click="onSelect($event, file)"
           data-ng-class="{'dd-file-selected':  file._ui.selected}">
           <td>
@@ -80,14 +80,14 @@
       </caption>
     </tbody>
   </table> <!-- ENDS FILE LISTING TABLE -->
+</div>
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
   <button class="btn btn-default btn-block" 
-          data-ng-show="!(browser.busyListing || browser.busy)"
-          ng-disabled="browser.reachedEnd || browser.busyListing || browser.busy" 
+          data-ng-show="!(browser.busyListing || browser.busy || browser.reachedEnd)"
           ng-click="loadMore()">
-            {{browser.reachedEnd? "No more files to show. ": "Show more files "}}
+            Show more files
             <i class="fa fa-spinner fa-spin" 
                data-ng-if="browser.loadingMore">
             </i>
@@ -95,28 +95,4 @@
           </div>
           <div class="col-md-3"></div>
   </div>
-  </div>
-  <!--
-  <div class="row" ng-if="!browser.busyListing && browser.listing.children.length > state.limit">
-    <div class="col-md-3">
-        <button class="btn btn-default pull-left"
-          ng-click="prevPage()"
-          ng-disabled="state.page_num === 0">
-          <i class="fa fa-chevron-left"></i> Prev
-        </button>
-      </div>
-      <div class="col-md-6">
-        <div class="text-center">
-          <span class="badge"> {{state.page_num + 1}} / {{ state.max_pages }} </span>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <button class="btn btn-default pull-right"
-          ng-click="nextPage()"
-          ng-disabled="state.page_num + 1 === state.max_pages">
-          <i class="fa fa-chevron-right"></i> More
-        </button>
-      </div>
-</div> 
--->
-<!-- END FILE LISTING TABLE WRAPPER -->
+
