--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -18,6 +18,7 @@
     {% block head_extra %}{% endblock %}
     <!-- styles -->
     <!-- Vendor CSS -->
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.vendor.css %>">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -39,6 +40,7 @@
     {% include 'includes/footer.html' %}
     <!-- scripts -->
     <!-- Vendor base JS -->
+    <script src="<%= htmlWebpackPlugin.files.chunks.vendor.entry %>"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script> -->
     <!-- <script src="{% static 'vendor/jquery/dist/jquery.js' %}"></script> -->
