--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -37,7 +37,7 @@
     <div class="col-sm-3">
       <div><span>Quick Links</span></div>
       <div><a href="/accounts/profile/">Manage Account</a></div>
-      <div><a ui-sref="wb.data_depot.db({'systemId': vm.mydata_system.systemId, 'path': '', 'name': vm.mydata_system.name, 'directory': 'agave'})">Data Depot</a></div>
+      <div><a ui-sref="wb.data_depot.db({'systemId': vm.mydata_system.systemId, 'path': '', 'name': vm.mydata_system.name, 'directory': 'agave'})">Data Files</a></div>
       <div><a ui-sref="wb.workspace">Applications</a></div>
       <!-- <div><a href="/workbench/help">Training</a></div> -->
     </div>
